Refactor TicTacToe.java